Fix regionizer collection usage warnings